# sav

./: .gitignore  default.nix  doc.org  doc.tex  flake.nix  hie.yaml  liquid-demo.cabal
app/: Main.hs
src/: Lib.hs
