cabal-version: 2.4
name:          liquid-demo
version:       0.1.0.0
license:       GPL-3.0-only
author:        Jakub Zárybnický
maintainer:    xzaryb00@stud.fit.vutbr.cz

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall -fplugin=LiquidHaskell
  build-depends:
    , liquid-base
    , liquid-bytestring
    , liquid-containers
    , liquid-vector
    , liquidhaskell

  exposed-modules:  Lib

executable liquid-demo
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
    , liquid-demo
    , liquidhaskell
